--- a/문제01-1.md
+++ b/문제01-1.md
@@ -1,11 +1,11 @@
 1. 사용자로부터 총 5개의 정수를 입력 받아서, 그 합을 출력하는 프로그램을 작성해보자. 단, 프로그램의 실행은 다음과 같이 이루어져야 한다.
->실행 예시
-1번째 정수 입력: 1
-2번째 정수 입력: 2
-3번째 정수 입력: 3
-4번째 정수 입력: 4
-5번째 정수 입력: 5
-합계: 15
+>실행 예시<br>
+1번째 정수 입력: 1<br>
+2번째 정수 입력: 2<br>
+3번째 정수 입력: 3<br>
+4번째 정수 입력: 4<br>
+5번째 정수 입력: 5<br>
+합계: 15<br>
 
 ```
 #include <iostream>
@@ -54,13 +54,13 @@ int main(void){
 4. 판매원들의 급여 계산 프로그램을 작성해보자. 이 회사는 모든 판매원에게 매달 50만원의 기본 급여와 물품 판매 가격의 12%에 해당하는 돈을 지급한다.
 예를 들어서 민수라는 친구의 이번 달 물품 판매 금액이 100만원이라면, 50+100*0.12=62, 따라서 62만원을 급여로 지급 받는다. 
 단, 아래의 실행의 예에서 보이듯이 이러한 그벼의 계산은 -1이 입력될 때까지 계속 되어야 한다.
->실행 예시
-판매 금액을 만원 단위로 입력(-1 to end): 100
-이번 달 급여: 62만원
-.
-.
-판매 금액을 만원 단위로 입력(-1 to end): -1
-프로그램을 종료합니다.
+>실행 예시<br>
+판매 금액을 만원 단위로 입력(-1 to end): 100<br>
+이번 달 급여: 62만원<br>
+.<br>
+.<br>
+판매 금액을 만원 단위로 입력(-1 to end): -1<br>
+프로그램을 종료합니다.<br>
 
 ```
 #include <iostream>
