--- a/문제01-2.md
+++ b/문제01-2.md
@@ -16,9 +16,9 @@ int main(void){
     return 0;
 }
 ```
->실행 예시
-30 20
-Z A
+>실행 예시<br>
+30 20<br>
+Z A<br>
 5.555 1.111
 
 ```
@@ -58,9 +58,9 @@ int main(void){
 }
 ```
 
->Reminder (*, &)
-&: 변수의 주소
-*: 주소가 가리키는 곳의 데이터
+>Reminder (*, &)<br>
+&: 변수의 주소<br>
+*: 주소가 가리키는 곳의 데이터<br>
 (포인터를 사용하려면 반드시 변수를 가리키는 포인터를 먼저 선언해야 한다. a 자체는 그냥 숫자를 저장하는 변수이므로 *a처럼 주소를 역참조(dereference)할 수 없음)
 그래서 위의 함수 작동 방식을 정리하면
 int *num = &num = (num변수의 주소)
