--- a/문제01-4.md
+++ b/문제01-4.md
@@ -26,9 +26,9 @@ PS C:\choi_cpp\CppStudy> g++ .\Q01_4source2.cpp -c
 컴파일 결과: Q01_4source1.o, Q01_4source2.o 파일이 생성됨
 
 2 실행 파일(.exe) 생성 (모든 객체 파일 링크)
-PS C:\choi_cpp\CppStudy> g++.exe Q01_4source1.cpp Q01_4source2.cpp -o Q01_4.exe
+```PS C:\choi_cpp\CppStudy> g++.exe Q01_4source1.cpp Q01_4source2.cpp -o Q01_4.exe```
 >Q01_4source1.o와 Q01_4source2.o를 링크하여 실행 가능한 .exe 파일을 만듦.<br>
 헤더 파일(Q01_4.h)은 컴파일되지 않지만, 소스 파일이 #include "Q01_4.h"를 참조하면서 자동으로 포함됨.
 
 3 실행파일 실행 (.exe)
-PS C:\choi_cpp\CppStudy> .\Q01_4.exe
+```PS C:\choi_cpp\CppStudy> .\Q01_4.exe```
